--- a/index.html
+++ b/index.html
@@ -5,11 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!--
-        SA0001: I Sami Nachwati, 000879289 certify that this material is 
-        my original work. No other person's work has been used without due 
-        acknowledgement. I have not made my work available to anyone else.
         Author: Sami Nachwati
-        Student ID: 000879289
         File: index.html
         description: The webpage of the game mechanics, containing the svg elements and other elements 
     -->
@@ -21,20 +17,18 @@
 </head>
 <body>
     <audio id="thunder">
-        <source src="recording/thunder.wav" type="audio/wav">
+        <source src="thunder.wav" type="audio/wav">
     </audio>
     <audio id="strike">
-        <source src="recording/strike.wav" type="audio/wav">
+        <source src="strike.wav" type="audio/wav">
     </audio>
     <header>
-        <img src="./img/rainDash.png" alt="game logo">
+        <img src="rainDash.png" alt="game logo">
         <h2>
             Rain Dash
         </h2>
         <h2>
             Sami Nachwati
-            <br>
-            000879289
         </h2>
     </header>
     <main>
@@ -52,7 +46,7 @@
             <div>    
                 <p class="text-headings">Game Audio:</p>
                 <audio controls loop>
-                    <source src="recording/music.wav" type="audio/wav">
+                    <source src="music.wav" type="audio/wav">
                 </audio>
             </div>
             <div>
@@ -120,14 +114,14 @@
             &copy; 2023
         </p>
 
-        <img id="game_icon" src="./img/rainDash.png" alt="game name">
+        <img id="game_icon" src="rainDash.png" alt="game name">
 
         <p id="name">
             Sami Nachwati
         </p>
 
-        <p id="student-number">
-            000879289
+        <p id="rights-message">
+            All rights reserved
         </p>
     </footer>
 </body>
