--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!--
-        Author: Sami Nachwati
+        Developer: Sami Nachwati
         File: index.html
         description: The webpage of the game mechanics, containing the svg elements and other elements 
     -->
@@ -15,7 +15,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
 </head>
-<body>
+<body id="bd">
     <audio id="thunder">
         <source src="thunder.wav" type="audio/wav">
     </audio>
@@ -28,84 +28,111 @@
             Rain Dash
         </h2>
         <h2>
-            Sami Nachwati
+            Sami.dev
         </h2>
     </header>
     <main>
         <div id="options">
             <div>
-                <label class="text-headings">
-                    Time of day (morning, evening, or nighttime?)
-                </label>
-                <br>
-                <input id="time_of_day">
+                <h3 class="text-headings">
+                   <img src="time.png" alt=""> Time of day (morning, evening, or nighttime?)
+                </h3>
+                <input id="time_of_day" placeholder="evening...">
                 <button id="set_time" class="btn btn-primary">
                     Set
                 </button>
             </div>
             <div>    
-                <p class="text-headings">Game Audio:</p>
-                <audio controls loop>
+                <h3 class="text-headings">
+                    <img src="audio.png" alt="">
+                    Game Audio:
+                </h3>
+                <audio id="game-music" controls loop>
                     <source src="music.wav" type="audio/wav">
                 </audio>
             </div>
             <div>
-                <p class="text-headings">Level of Difficulty (Select Option When You Click READY):</p>
+                <h3 class="text-headings">
+                    <img src="difficulty.png" alt="">
+                    Level of Difficulty (Select Option AFTER You Click READY):
+                </h3>
                 <button id="easy" class="btn btn-success">Easy</button>
                 <button id="medium" class="btn btn-warning">Medium</button>
                 <button id="impossible" class="btn btn-danger">Impossible</button>
             </div>
             <div>    
-                <p class="text-headings">
-                    How to Play:
-                </p>
-                <p>
-                    Avoid raindrops from the sky (Warning, there is random lighting/thunder sounds!)
-                </p>
+                <h3 class="text-headings">
+                   <img src="guide.png" alt=""> How to Play:
+                </h3>
+                <h3>
+                    Avoid raindrops from the sky (Beware of random lighting/thunder sounds!)
+                </h3>
             </div>
             <div>
-                <p class="text-headings">
-                    Controls:
-                </p>
-                <p> 
-                    <span>a</span> / <span>left arrow</span> to move left.
-                    <br>
-                    <br> 
-                    <span>d</span> / <span>right arrow</span> to move right.
-                </p>
+                <h3 class="text-headings">
+                    <img src="controls.png" alt=""> Controls:
+                </h3>
+                <h3> 
+                    Moving Left:
+                    <span>
+                        <img class="buttons" src="a_button.png" alt="a keybind">
+                    </span> 
+                    /
+                    <span>
+                        <img class="buttons" src="left.png" alt="left keybind">
+                    </span>
+                    Moving Right:
+                    <span>
+                        <img class="buttons" src="d_button.png" alt="a keybind">
+                    </span> 
+                    / 
+                    <span>
+                        <img class="buttons" src="right.png" alt="left keybind">
+                    </span>
+                </h3>
             </div>
             <div>
-                <p class="text-headings">
-                    Press the ready button to play!
-                </p>
+                <h3 class="text-headings">
+                    Click the ready button to Start 
+                </h3>
                 <button id="ready" class="btn btn-info">
                     READY
                 </button>
             </div>
         </div>
-        <svg id="my-svg" height="800" width="1920">
-            <rect id="sky" height="100" width="1920"/>
-            <circle id="wheel" class="person" cx="200" cy="765" r="30"/>
-            <circle id="inner-wheel" class="person" cx="200" cy="765" r="10"/>        
-            <line id="body1" class="person bob-line" x1="200" y1="635" x2="200" y2="760" />
-            
-            <line id="screen" class="person" x1="200" y1="645" x2="200" y2="710"/>
+        <div id="play-again">
+            <button class="btn btn-danger">
+                Play Again
+            </button>
+        </div>
+        <div id="svgContainer">
+        <svg id="my-svg" height="550" width="500">
+                <rect id="sky" height="100" width="500"/>
+                <text x="300" y="20">CurrentScore:</text>
+                <text id="current-score-value" x="415" y="20">0</text>
+                <text x="300" y="40">HighScore:</text>
+                <text id="high-score-value" x="415" y="40">0</text>
+            <g id="robot">
+                <circle id="wheel" class="person" cx="150" cy="465" r="30"/>
+                <circle id="inner-wheel" class="person" cx="150" cy="465" r="10"/>
 
-
-            <text id="first-txt" class="person txt" x="175" y="678">Score</text>
-            <text id="second-txt" class="person txt score" x="175" y="698">0</text>
-            <polygon id="lightning" points="200,100 400,600, 600,800 320,185" fill="#FFFF00"/>
+                <line id="body1" class="person bob-line" x1="150" y1="470" x2="150" y2="350"/>
+                
+                <line id="screen" class="person" x1="150" y1="360" x2="150" y2="450"/>
+                <text id="first-txt" class="person txt" x="130" y="400">Score</text>
+                <text id="second-txt" class="person txt score" x="130" y="420">0</text>
+            </g>
+            <g id="lightning">
+                <line x1="200" y1="100" x2="160" y2="200" stroke="yellow" stroke-width="15"/>
+                <line x1="160" y1="195" x2="230" y2="300" stroke="yellow" stroke-width="15"/>
+                <line id="lightningBolt" x1="230" y1="295" x2="160" y2="500" stroke="yellow" stroke-width="15"/>
+            </g>
+                <rect y="500" height="100" width="500" fill="green"></rect>
         </svg>
-
-        <div class="ground">
-        </div>
-        <div id="road">
-        </div>
-        <div class="ground">
         </div>
     </main>
 
-    <footer>
+    <footer class="">
         <p id="game_name">
             RainDash
         </p>
@@ -115,14 +142,6 @@
         </p>
 
         <img id="game_icon" src="rainDash.png" alt="game name">
-
-        <p id="name">
-            Sami Nachwati
-        </p>
-
-        <p id="rights-message">
-            All rights reserved
-        </p>
     </footer>
 </body>
 </html>
